fix(client): set entire webapp to hidden overflows

--- a/client/src/pages/global.css
+++ b/client/src/pages/global.css
@@ -14,6 +14,7 @@ body {
     font-size: var(--normal);
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 h1 {
